--- a/backend/temp.ipynb
+++ b/backend/temp.ipynb
@@ -419,23 +419,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': '1609676719925137408', 'company': ['AAPL'], 'post_date': ['2023-01-01T22:23:31Z'], 'author': ['David_Tracey'], 'raw_text': ['Things are going to get very interesting but when...?\\nMy Q1 forecast below...\\n\\nSome updates here on $AAPL too as requested.\\n\\nhttps://t.co/dU1FcS22JP https://t.co/x8RhRPXHhD'], 'like_num': [27], 'subjectivity': [0], 'sentiment': [0.0], 'clean_text': ['Things going get interesting My Q1 forecast Some updates AAPL requested'], '_version_': 1762388624723148800}\n",
-      "{'id': '1609656899674284032', 'company': ['AAPL'], 'post_date': ['2023-01-01T21:04:45Z'], 'author': ['ASTS_Investors'], 'raw_text': [\"Happy New Year SpaceMob! \\n\\nLet's hope 2023 will be the year of #BlueWalker3 and $ASTS 🚀🤠\\n\\n#Space5G #5G $GSAT $T $AMT $TMUS $AAPL $IRDM #SpaceX $VOD https://t.co/cefLRpuvEl\"], 'like_num': [64], 'subjectivity': [1], 'sentiment': [1.0], 'clean_text': ['Happy New Year SpaceMob Lets hope 2023 year BlueWalker3 ASTS Space5G 5G GSAT T AMT TMUS AAPL IRDM SpaceX VOD'], '_version_': 1762388624792354816}\n",
-      "{'id': '1609651892447023104', 'company': ['AAPL'], 'post_date': ['2023-01-01T20:44:51Z'], 'author': ['BigCheds'], 'raw_text': ['$AAPL Apple weekly chart - hammer candle with spring from June lows https://t.co/5UTAgINmn2'], 'like_num': [104], 'subjectivity': [0], 'sentiment': [0.0], 'clean_text': ['AAPL Apple weekly chart hammer candle spring June lows'], '_version_': 1762388624797597696}\n",
-      "{'id': '1609636954454343680', 'company': ['AAPL'], 'post_date': ['2023-01-01T19:45:30Z'], 'author': ['ThetaWarrior'], 'raw_text': ['$AAPL Yearly -26.8% https://t.co/SewErQmOPE'], 'like_num': [80], 'subjectivity': [0], 'sentiment': [0.0], 'clean_text': ['AAPL Yearly 268'], '_version_': 1762388624797597697}\n",
-      "{'id': '1609625505287790592', 'company': ['AAPL'], 'post_date': ['2023-01-01T19:00:00Z'], 'author': ['TrendSpider'], 'raw_text': ['Looking for shorts into the new year? 📉\\n\\nThis weekly triangle breakdown scan is a great way to generate some potential candidates in seconds!\\n\\n$AAPL $DLTR $CMG $DG $MOS $CF $ALB\\n\\nhttps://t.co/iceKYDRwye'], 'like_num': [28], 'subjectivity': [1], 'sentiment': [1.0], 'clean_text': ['Looking shorts new year This weekly triangle breakdown scan great way generate potential candidates seconds AAPL DLTR CMG DG MOS CF ALB'], '_version_': 1762388624797597698}\n",
-      "{'id': '1609585344948887552', 'company': ['AAPL'], 'post_date': ['2023-01-01T16:20:25Z'], 'author': ['lord_fed'], 'raw_text': ['Don’t really see what is holding $AAPL up @ 20x P/E\\n\\nCould see 107-113 in 2023. Can’t imagine much further down.'], 'like_num': [149], 'subjectivity': [1], 'sentiment': [-1.0], 'clean_text': ['Dont really see holding AAPL 20x PE Could see 107113 2023 Cant imagine much'], '_version_': 1762388624798646272}\n",
-      "{'id': '1609552780863369216', 'company': ['AAPL'], 'post_date': ['2023-01-01T14:11:01Z'], 'author': ['Mr_Derivatives'], 'raw_text': [\"$AAPL A lot of ppl might be surprised if I said in 2023 Apple could see $95. But then again a lot of ppl didn't think TSLA would have crashed that hard either!\\n\\nWe got a nice rounding top formation, and a huge gap fill at $95, which will still be well above pre-covid highs!\\n\\nFWIW https://t.co/8n37VOPyUu\"], 'like_num': [519], 'subjectivity': [1], 'sentiment': [1.0], 'clean_text': ['AAPL A lot ppl might surprised I said 2023 Apple could see 95 But lot ppl didnt think TSLA would crashed hard either We got nice rounding top formation huge gap fill 95 still well precovid highs FWIW'], '_version_': 1762388624798646273}\n",
-      "{'id': '1609542582652084224', 'company': ['AAPL'], 'post_date': ['2023-01-01T13:30:30Z'], 'author': ['ProblemSniper'], 'raw_text': ['📈 $AAPL Break of a trendline support on the weekly while the RSI and MACD are in inclined bearish with growing momentum and some bear positioning on it into the earnings cycle (Feb Positions). PT: 115 https://t.co/pkyYXpnLAK'], 'like_num': [105], 'subjectivity': [1], 'sentiment': [1.0], 'clean_text': ['AAPL Break trendline support weekly RSI MACD inclined bearish growing momentum bear positioning earnings cycle Feb Positions PT 115'], '_version_': 1762388624799694848}\n",
-      "{'id': '1609407163671400448', 'company': ['AAPL'], 'post_date': ['2023-01-01T04:32:23Z'], 'author': ['The_AI_Investor'], 'raw_text': ['Apple iphone market share peaked in H1 2009 and then falling, the stock should fall too, right? \\n\\nBut no, $AAPL was up 10x in the next 6 years from 2009 to 2015 https://t.co/vE04xsvtiM'], 'like_num': [66], 'subjectivity': [1], 'sentiment': [1.0], 'clean_text': ['Apple iphone market share peaked H1 2009 falling stock fall right But AAPL 10x next 6 years 2009 2015'], '_version_': 1762388624799694849}\n",
-      "{'id': '1609341872639512576', 'company': ['AAPL'], 'post_date': ['2023-01-01T00:12:57Z'], 'author': ['NeelyTamminga'], 'raw_text': ['FinTwit: $AAPL 📈📉 ?\\nMe: mmmm 🍎🥧 https://t.co/fRUXuAlVD0'], 'like_num': [52], 'subjectivity': [0], 'sentiment': [0.0], 'clean_text': ['FinTwit AAPL Me mmmm'], '_version_': 1762388624801792000}\n"
+      "{'q': 'company:AAPL AND subjectivity:1', 'fq': 'post_date:[2023-01-01T00:00:00Z TO 2023-03-30T00:00:00Z]', 'rows': 0}\n",
+      "{'q': 'company:AAPL AND subjectivity:0', 'fq': 'post_date:[2023-01-01T00:00:00Z TO 2023-03-30T00:00:00Z]', 'rows': 0}\n",
+      "{'q': 'company:AAPL AND sentiment:0', 'fq': 'post_date:[2023-01-01T00:00:00Z TO 2023-03-30T00:00:00Z]', 'rows': 0}\n",
+      "{'q': 'company:AAPL AND sentiment:1', 'fq': 'post_date:[2023-01-01T00:00:00Z TO 2023-03-30T00:00:00Z]', 'rows': 0}\n",
+      "{'total': 892, 'subjective': 440, 'non_subjective': 452, 'negative': 515, 'neutral': 172, 'positive': 205, 'non_subjective_negative': 270, 'non_subjective_neutral': 172, 'non_subjective_positive': 10, 'subjective_negative': 245, 'subjective_neutral': 0, 'subjective_positive': 195}\n"
      ]
     }
    ],
@@ -444,21 +439,108 @@
     "solr = pysolr.Solr(\n",
     "    'http://localhost:8983/solr/stock_project_core', always_commit=True)\n",
     "start_date = datetime.datetime(2023, 1, 1)\n",
-    "end_date = datetime.datetime(2023, 1, 2)\n",
+    "end_date = datetime.datetime(2023, 3, 30)\n",
     "# Convert the dates to Solr date format\n",
     "start_date_str = start_date.strftime('%Y-%m-%dT%H:%M:%SZ')\n",
     "end_date_str = end_date.strftime('%Y-%m-%dT%H:%M:%SZ')\n",
     "range_query = 'post_date:[{} TO {}]'.format(start_date_str, end_date_str)\n",
-    "params = {\n",
-    "    'q': 'raw_text:AAPL',\n",
+    "t = \"company:AAPL\"\n",
+    "normal_params = {\n",
+    "    'q': t,\n",
     "    'fq': range_query,\n",
-    "    'rows': 10,\n",
-    "    'sort': 'post_date desc'\n",
+    "    'rows': 0,\n",
+    "}\n",
+    "results = solr.search(**normal_params)\n",
+    "total_tweets = results.hits\n",
+    "\n",
+    "subjective_params = {\n",
+    "    'q': t + \" AND subjectivity:1\",\n",
+    "    'fq': range_query,\n",
+    "    'rows': 0,\n",
+    "}\n",
+    "print(subjective_params)\n",
+    "results = solr.search(**subjective_params)\n",
+    "subjective_tweets = results.hits\n",
+    "\n",
+    "non_subjective_params = {\n",
+    "    'q': t + \" AND subjectivity:0\",\n",
+    "    'fq': range_query,\n",
+    "    'rows': 0,\n",
+    "}\n",
+    "print(non_subjective_params)\n",
+    "results = solr.search(**non_subjective_params)\n",
+    "non_subjective_tweets = results.hits\n",
+    "\n",
+    "neutral_sentiment_params = {\n",
+    "    'q': t + \" AND sentiment:0\",\n",
+    "    'fq': range_query,\n",
+    "    'rows': 0,\n",
+    "}\n",
+    "print(neutral_sentiment_params)\n",
+    "results = solr.search(**neutral_sentiment_params)\n",
+    "neutral_tweets = results.hits\n",
+    "\n",
+    "positive_sentiment_params = {\n",
+    "    'q': t + \" AND sentiment:1\",\n",
+    "    'fq': range_query,\n",
+    "    'rows': 0,\n",
     "}\n",
     "\n",
-    "results = solr.search(**params)\n",
-    "for r in results:\n",
-    "    print(r)"
+    "results = solr.search(**positive_sentiment_params)\n",
+    "positive_tweets = results.hits\n",
+    "\n",
+    "negative_tweets = total_tweets - positive_tweets - neutral_tweets\n",
+    "\n",
+    "non_sub_neu_params = {\n",
+    "    'q': t + \" AND subjectivity:0 AND sentiment:0\",\n",
+    "    'fq': range_query,\n",
+    "    'rows': 0,\n",
+    "}\n",
+    "results = solr.search(**non_sub_neu_params)\n",
+    "non_subjective_neutral = results.hits\n",
+    "\n",
+    "non_sub_pos_params = {\n",
+    "    'q': t + \" AND subjectivity:0 AND sentiment:1\",\n",
+    "    'fq': range_query,\n",
+    "    'rows': 0,\n",
+    "}\n",
+    "results = solr.search(**non_sub_pos_params)\n",
+    "non_subjective_positive = results.hits\n",
+    "non_subjective_negative = non_subjective_tweets - non_subjective_positive - non_subjective_neutral\n",
+    "\n",
+    "sub_neu_params = {\n",
+    "    'q': t + \" AND subjectivity:1 AND sentiment:0\",\n",
+    "    'fq': range_query,\n",
+    "    'rows': 0,\n",
+    "}\n",
+    "results = solr.search(**sub_neu_params)\n",
+    "subjective_neutral = results.hits\n",
+    "\n",
+    "sub_pos_params = {\n",
+    "    'q': t + \" AND subjectivity:1 AND sentiment:1\",\n",
+    "    'fq': range_query,\n",
+    "    'rows': 0,\n",
+    "}\n",
+    "results = solr.search(**sub_pos_params)\n",
+    "subjective_positive = results.hits\n",
+    "\n",
+    "subjective_negative = subjective_tweets - subjective_positive - subjective_neutral\n",
+    "\n",
+    "response = {\n",
+    "    \"total\":total_tweets,\n",
+    "    \"subjective\": subjective_tweets,\n",
+    "    \"non_subjective\": non_subjective_tweets,\n",
+    "    \"negative\": negative_tweets,\n",
+    "    \"neutral\": neutral_tweets,\n",
+    "    \"positive\": positive_tweets,\n",
+    "    \"non_subjective_negative\": non_subjective_negative,\n",
+    "    \"non_subjective_neutral\": non_subjective_neutral,\n",
+    "    \"non_subjective_positive\": non_subjective_positive,\n",
+    "    \"subjective_negative\": subjective_negative,\n",
+    "    \"subjective_neutral\": subjective_neutral,\n",
+    "    \"subjective_positive\": subjective_positive\n",
+    "}\n",
+    "print(response)\n"
    ]
   }
  ],
